2009-07-02  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_output: Rewrite.
	* c++/subr.hh: New helpers for dwarf_output/dwarf_data.

	* c++/dwarf_edit: Much guts moved to ...
	* c++/dwarf_data: ... here, new file.
	* c++/known.cc: Update specializations.

	* libdw/c++/edit-values.cc (what_space): Moved to ...
	* c++/data-values.hh: ... here, new file.

	* Makefile.am (noinst_HEADERS): Add it.

	* c++/output-values.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.
	Makefile.am (pkginclude_HEADERS): Add dwarf_data, dwarf_output.

	* c++/dwarf: Use to_string function overload, not to_string method.
	* c++/values.cc: Define to_string specializations.

2009-07-01  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker: Major revamp for efficiency and to handle
	circular reference chains.
	* c++/dwarf_comparator: Tracker interface changes.

2009-06-19  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_comparator: New file.
	* c++/dwarf_tracker: New file.
	* Makefile.am (pkginclude_HEADERS): Add them.

	* c++/dwarf_edit: Miscellaneous fixes.
	Support dwarf_enum, to_string for attributes.
	* c++/known.cc: Support dwarf_edit::dwarf_enum.
	* c++/edit-values.cc: Support to_string for attributes.
	* c++/values.cc: Rejiggered accordingly.

	* c++/dwarf-knowledge.cc (expected_value_space): Expect unit_reference
	only for DW_TAG_imported_unit.

	* c++/dwarf: Miscellaneous fixes.

2009-04-02  Roland McGrath  <roland@redhat.com>

	* Makefile.am (noinst_HEADERS): Add known-dwarf.h and
	c++/dwarf-knowledge.cc here.

2009-03-29  Roland McGrath  <roland@redhat.com>

	* c++/exception.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.

2009-03-25  Roland McGrath  <roland@redhat.com>

	* c++/dwarf, c++/values.cc: Proper dwarf_constant support.
	* c++/dwarf_edit, c++/edit-values.cc: Likewise.
	* c++/known.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.

2009-03-24  Petr Machata  <pmachata@redhat.com>

	* c++/dwarf (dwarf::debug_info_entry::raw_attributes):