@@ -1,5 +1,7 @@
 2009-07-02  Roland McGrath  <roland@redhat.com>
 
+	* dwarflint-hl.cc (operator<<): dwarf::VS_unit_reference is gone.
+
 	* dwarfcmp.cc (main): Update -T constructors using tracker.
 	Instantiate and test dwarf_output for -T too.
 
